--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,34 +1,35 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
+    "version": "0.1.0",
+      "private": true,
+        "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+      "build": "next build",
+        "start": "next start",
+          "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.6",
-    "@mui/material": "^5.16.6",
-    "@mui/x-date-pickers": "^7.12.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "dayjs": "^1.11.12",
-    "lucide-react": "^0.418.0",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+      "@emotion/styled": "^11.13.0",
+        "@mui/icons-material": "^5.16.6",
+          "@mui/material": "^5.16.6",
+            "@mui/x-date-pickers": "^7.12.0",
+              "@radix-ui/react-slot": "^1.1.0",
+                "axios": "^1.7.4",
+                  "class-variance-authority": "^0.7.0",
+                    "clsx": "^2.1.1",
+                      "dayjs": "^1.11.12",
+                        "lucide-react": "^0.418.0",
+                          "next": "14.2.5",
+                            "react": "^18",
+                              "react-dom": "^18",
+                                "tailwind-merge": "^2.4.0",
+                                  "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+      "eslint-config-next": "14.2.5",
+        "postcss": "^8",
+          "tailwindcss": "^3.4.1"
   }
 }
