--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^7.12.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.4",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
