--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,23 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.3",
-    "nodemon": "^3.1.4"
+      "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+          "express": "^4.19.2",
+            "mongoose": "^8.5.3",
+              "nodemon": "^3.1.4"
   },
   "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon  index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "version": "1.0.0",
+      "main": "index.js",
+        "type": "module",
+          "scripts": {
+    "start": "node index.js", // Change for production
+      "dev": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "author": "",
+      "license": "ISC",
+        "description": ""
 }
